@@ -1010,3 +1010,6 @@ ATS V1.5:
 
     HADOOP-12589. Fix intermittent test failure of TestCopyPreserveFlag
     (iwasakims)
+
+    HDFS-9431. DistributedFileSystem#concat fails if the target path is
+    relative. (Kazuho Fujii via aajisaka)
